# tomolint

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: config.yaml  metrics.csv  plot.py  sample_train.py  train.py  train_all.py  train_cli.py  train_cnn.py  train_vit.py
tests/: test_training.py
tomolint/: __init__.py  cnn.py  dataloader.py  training.py  vit.py
tomolint-app/: Dockerfile  README.md  Singularity.def  app.py  requirements.txt  test.py  tomolint.def
tomolint-app/models/: cnn.ckpt
tomolint-app/test images/: bad-center_tomo_00074_rec_recon_00282.tiff  datasets-no-ring_LT_S9_177_rec_recon_02425.tiff
utils/: data_rec.py  data_viz.py  plot.py
