[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomolint"
version = "0.0.0"
authors = [
  { name="Daniel Ching", email="dching@anl.gov" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
